# VC

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac  main  main.c  vcc-plugin.pc.in
data/lm/en/: vc.arpabo  vc.corpus  vc.dic  vc.dmp  vc.lm  vc.sent  vc.sent.arpabo  vc.token  vc.vocab
docs/: casos_de_uso.odt  draft-001.txt
images/: Cadeia_Markov.odg  Casos_de_Uso.odg  DFD0.odg  DFD1.odg  DFD_Nivel0.odg  Extrator_Caracteristica.odg  Processo_Reconhecimento_Fala.odg  architecture.odg  flow-alt.odg  flow.odg  x_client_server.odg
speech/: hander.h~  handler.c  handler.h  handler.h~  main.c  manager.c  manager.h  manager.h~  plugin.h  plugin.h~
speech/plugins/: gcc_command  main  main.c  main.c~  sphinx.c  sphinx.c~  sphinx.h  sphinx.h~
src/: Makefile.am  README  app  app.h  console.c  console.h  gst-test.c  gstpocketsphinx.c  main.c  main_control.c  spi-test.c  utils.c  utils.h  vc.h  wnck-test.c  wnck2.c
src/console/: commands.c  commands.h  console.c  console.h  types.h
src/control/: app  control.plugin.txt  control_plugin.h  foo.c  gedit_plugin.c  handler.c  handler.h  main.c  manager.c  manager.h  plugin.c  plugin.h  plugin_tools.h  types.h
src/control/plugins/: gedit.c
src/control/tmp/: ghash.c  main.c
src/old/: command_manager.h  gstpocketsphinx.c  gstreamer.c  pocketsphinx.c  speech_plugin.h  sphinx_plugin.c  test  window-test.c  x-test.c
src/plugins/control/computer/: computer.c
src/plugins/control/firefox/: firefox.c
src/plugins/control/gedit/: gedit.c
src/plugins/control/libreoffice/: libreoffice.c
src/plugins/control/tetris/: tetris.c
src/plugins/speech/sphinx/: sphinx.c
src/vc/: app.h
src/vc/console/: commands.c  commands.h  console.c  console.h  types.h
src/vc/control/: handler.c  handler.h  manager.c  manager.h  plugin.c  plugin.h  types.h
src/vc/control/plugins/: gedit.c
src/vc/speech/: handler.c  handler.h  manager.c  manager.h  plugin.h
src/vc/speech/plugins/: print.c
